--- a/css/index.css
+++ b/css/index.css
@@ -121,6 +121,9 @@ h1, .h1, h2, h3, h4, h5, p, a {
   padding: 20px 40px 20px 40px;
   border-radius: 0px 0px 15px 15px;
 }
+.case-studies .card-container #living-description {
+  background: #D4EBD9;
+}
 .case-studies .card-container #ourdate-description {
   background: rgba(230, 244, 246, 0.95);
 }
@@ -141,6 +144,10 @@ h1, .h1, h2, h3, h4, h5, p, a {
 .card-container:hover {
   cursor: pointer;
   transform: scale(0.95);
+}
+.card-container:hover #living-description {
+  background: #A5D1AE;
+  transition: 0.5s;
 }
 .card-container:hover #ourdate-description {
   background: #B8E0E5;
