--- a/css/index.scss
+++ b/css/index.scss
@@ -148,6 +148,9 @@ h1, .h1, h2, h3, h4, h5, p, a {
       padding: 20px 40px 20px 40px;
       border-radius: 0px 0px 15px 15px;
     }
+    #living-description {
+      background: #D4EBD9;
+    }
     #ourdate-description {
       background: $ourdate-color;
     }
@@ -173,6 +176,10 @@ h1, .h1, h2, h3, h4, h5, p, a {
   // transform: scale3d(0.95, 0.95, 1);
   transform: scale(0.95);
 
+  #living-description {
+    background: #A5D1AE;
+    transition: 0.5s;
+  }
   #ourdate-description {
     background: $ourdate-hovered;
     transition: 0.5s;
